--- a/Makefile.bsd
+++ b/Makefile.bsd
@@ -87,7 +87,7 @@ HEADER_DIRS = . books eye_candy io pawn fsaa engine xz
 DEP_FILES=$(foreach OBJ, $(COBJS), .deps/$(OBJ).P) $(foreach OBJ, $(CXXOBJS), .deps/$(OBJ).P)
 #(shell echo $OBJ |sed s/\.o/\.P/))
 
-EXE=el.x86.bsd.bin
+EXE=ol.x86.bsd.bin
 
 ifndef CC
 CC=gcc
