Makefile changes -DOTHER_LIFE, Uint64 changes for experience levels

--- a/Makefile.osx
+++ b/Makefile.osx
@@ -1,7 +1,10 @@
 .PHONY: clean release docs
 
+#Make the flag for Other-Life
+OTHER_LIFE = -DOTHER_LIFE
+
 # tune these for your setup & compile options
-OPTIONS=-DOSX -DELC -DNO_MUSIC -DATI_9200_FIX -DBUG_FIX_3D_OBJECTS_MIN_MAX -DUSE_FRAMEBUFFER -DNEW_FRUSTUM -DAUTO_UPDATE -DNEW_TEX -DCOUNTERS -DNEW_E3D_FORMAT -DALUT_WAV
+OPTIONS=-DOSX $(OTHER_LIFE) -DELC -DNO_MUSIC -DATI_9200_FIX -DBUG_FIX_3D_OBJECTS_MIN_MAX -DUSE_FRAMEBUFFER -DNEW_FRUSTUM -DAUTO_UPDATE -DNEW_TEX -DCOUNTERS -DNEW_E3D_FORMAT -DALUT_WAV
 #-DX86_64
 #-DTIMER_CHECK
 #-DWRITE_XML
@@ -83,7 +86,11 @@ CXXOBJS=cal3d_wrapper.o eye_candy_wrapper.o \
 
 OBJS=$(COBJS) $(CXXOBJS)
 
+ifdef OTHER_LIFE
 EXE=ol_osx.exe
+else
+EXE=el_osx.exe
+endif
 
 CC=gcc
 CXX=g++
