--- a/Makefile.linux
+++ b/Makefile.linux
@@ -2,8 +2,11 @@
 
 -include make.conf
 
+#Make the flag for Other-Life
+OTHER_LIFE = -DOTHER_LIFE
+
 # basic compiling and linking - rarely changed
-OPTIONS = -DOTHER_LIFE -DLINUX -DELC $(foreach FEATURE, $(FEATURES), -D$(FEATURE)) -D_7ZIP_ST
+OPTIONS = $(OTHER_LIFE) -DLINUX -DELC $(foreach FEATURE, $(FEATURES), -D$(FEATURE)) -D_7ZIP_ST
 CFLAGS=$(PLATFORM) $(CWARN) -O0 -ggdb -pipe $(OPTIONS) $(shell sdl-config --cflags) $(shell xml2-config --cflags) -fno-strict-aliasing $(EXTRA_INCLUDES)
 _CFLAGS=$(PLATFORM) -O2 -fomit-frame-pointer -ffast-math -pipe $(OPTIONS) $(shell sdl-config --cflags) $(shell xml2-config --cflags) -fno-strict-aliasing $(EXTRA_INCLUDES)
 CXXFLAGS=$(PLATFORM) $(CXXWARN) -O0 -ggdb -pipe $(OPTIONS) $(shell sdl-config --cflags) $(shell xml2-config --cflags) -fno-strict-aliasing $(EXTRA_INCLUDES)
@@ -89,7 +92,11 @@ HEADER_DIRS = . books eye_candy io pawn fsaa engine xz
 DEP_FILES=$(foreach OBJ, $(COBJS), .deps/$(OBJ).P) $(foreach OBJ, $(CXXOBJS), .deps/$(OBJ).P)
 #(shell echo $OBJ |sed s/\.o/\.P/))
 
+ifdef OTHER_LIFE
 EXE=ol.x86.linux.bin
+else
+EXE=el.x86.linux.bin
+endif
 
 ifndef CC
 CC=gcc
