--- a/Makefile.osx
+++ b/Makefile.osx
@@ -12,7 +12,7 @@ OPTIONS=-DOSX $(OTHER_LIFE) -DELC -DNO_MUSIC -DATI_9200_FIX -DBUG_FIX_3D_OBJECTS
 #-DCUSTOM_LOOK    # allows you to customize your look. (EXPERIMENTAL)
 #-DUID            # use unique ID sent from server for custom looks. (INCOMPLETE)
 #-DNETWORK_THREAD # use separate thread for network reading (recommended)
-#-DANTI_ALIAS     # allows to enable/disable anti-aliasing in el.ini
+#-DANTI_ALIAS     # allows to enable/disable anti-aliasing in ini
 #-DMEMORY_DEBUG   # gather information about memory allocation and freeing
 #-DPNG_SCREENSHOT # make screenshots in W3C's PNG format in game
 #-DATI_9200_FIX   # flickering fix for ATI 92xx
