--- a/Makefile.linux
+++ b/Makefile.linux
@@ -4,10 +4,9 @@
 
 #Make the flag for Other-Life
 OTHER_LIFE = -DOTHER_LIFE
-BITS = -DX86_64
 
 # basic compiling and linking - rarely changed
-OPTIONS = $(OTHER_LIFE) $(BITS) -DLINUX -DELC $(foreach FEATURE, $(FEATURES), -D$(FEATURE)) -D_7ZIP_ST
+OPTIONS = $(OTHER_LIFE) -DLINUX -DELC $(foreach FEATURE, $(FEATURES), -D$(FEATURE)) -D_7ZIP_ST
 CFLAGS=$(PLATFORM) $(CWARN) -O0 -ggdb -pipe $(OPTIONS) $(shell sdl-config --cflags) $(shell xml2-config --cflags) -fno-strict-aliasing $(EXTRA_INCLUDES)
 _CFLAGS=$(PLATFORM) -O2 -fomit-frame-pointer -ffast-math -pipe $(OPTIONS) $(shell sdl-config --cflags) $(shell xml2-config --cflags) -fno-strict-aliasing $(EXTRA_INCLUDES)
 CXXFLAGS=$(PLATFORM) $(CXXWARN) -O0 -ggdb -pipe $(OPTIONS) $(shell sdl-config --cflags) $(shell xml2-config --cflags) -fno-strict-aliasing $(EXTRA_INCLUDES)
@@ -94,9 +93,9 @@ DEP_FILES=$(foreach OBJ, $(COBJS), .deps/$(OBJ).P) $(foreach OBJ, $(CXXOBJS), .d
 #(shell echo $OBJ |sed s/\.o/\.P/))
 
 ifdef OTHER_LIFE
-EXE=ol.x86-64.linux.bin
+EXE=ol.x86.linux.bin
 else
-EXE=el.x86-64.linux.bin
+EXE=el.x86.linux.bin
 endif
 
 ifndef CC
