--- a/elc_private.rc
+++ b/elc_private.rc
@@ -4,7 +4,7 @@
 #include <windows.h> // include for version info constants
 
 
-A ICON MOVEABLE PURE LOADONCALL DISCARDABLE "elc.ico"
+A ICON MOVEABLE PURE LOADONCALL DISCARDABLE "olc.ico"
 
 //
 // TO CHANGE VERSION INFORMATION, EDIT PROJECT OPTIONS...
