--- a/Makefile.osx
+++ b/Makefile.osx
@@ -1,7 +1,7 @@
 .PHONY: clean release docs
 
 #Make the flag for Other-Life
-OTHER_LIFE = -DOTHER_LIFE
+OTHER_LIFE = -DOTHER_LIFE -DOTHER_LIFE_EXTENDED_CHAT
 
 # tune these for your setup & compile options
 OPTIONS=-DOSX $(OTHER_LIFE) -DELC -DNO_MUSIC -DATI_9200_FIX -DBUG_FIX_3D_OBJECTS_MIN_MAX -DUSE_FRAMEBUFFER -DNEW_FRUSTUM -DAUTO_UPDATE -DNEW_TEX -DCOUNTERS -DNEW_E3D_FORMAT -DALUT_WAV
