--- a/Makefile.linux64
+++ b/Makefile.linux64
@@ -41,7 +41,7 @@ COBJS=2d_objects.o 3d_objects.o \
 	bbox_tree.o books.o buddy.o buffs.o bags.o \
 	cache.o cal.o calc.o chat.o cluster.o colors.o console.o consolewin.o \
 	counters.o cursors.o dds.o ddsimage.o dialogues.o draw_scene.o eye_candy_debugwin.o \
-	elconfig.o elwindows.o encyclopedia.o errors.o events.o	\
+	elconfig.o elwindows.o encyclopedia.o errors.o events.o	ext_protocol.o \
 	filter.o font.o framebuffer.o frustum.o	\
 	gamewin.o gl_init.o hud.o help.o highlight.o	\
 	ignore.o init.o interface.o items.o io/fileutil.o	\
