Adding dawigit changes: set correct FILEVERSION and PRODUCTVERSION [1,9,5,4]

--- a/elc_private.rc
+++ b/elc_private.rc
@@ -3,15 +3,18 @@
 
 #include <windows.h> // include for version info constants
 
-
+#ifdef OTHER_LIFE
 A ICON MOVEABLE PURE LOADONCALL DISCARDABLE "olc.ico"
+#else
+A ICON MOVEABLE PURE LOADONCALL DISCARDABLE "elc.ico"
+#endif
 
 //
 // TO CHANGE VERSION INFORMATION, EDIT PROJECT OPTIONS...
 //
 1 VERSIONINFO
-FILEVERSION 1,9,5,1
-PRODUCTVERSION 1,9,5,1
+FILEVERSION 1,9,5,4
+PRODUCTVERSION 1,9,5,4
 FILETYPE VFT_APP
 {
   BLOCK "StringFileInfo"
