--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -237,7 +237,7 @@ elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
 	add_definitions(-DWINDOWS -DWINVER=0x500 -mwindows -DNDEBUG)
 	set(EXTRA_LD_FLAGS "${EXTRA_LD_FLAGS} -mwindows")
 	set(SOURCES ${SOURCES} ${SD}elc_private.rc)
-	set(CMAKE_RC_COMPILE_OBJECT "<CMAKE_RC_COMPILER> -i <SOURCE> -o <OBJECT>")
+	set(CMAKE_RC_COMPILE_OBJECT "<CMAKE_RC_COMPILER> -i <SOURCE> <DEFINES> -o <OBJECT>")
 else()
 	message( FATAL_ERROR "Unknown platform [${CMAKE_SYSTEM_NAME}]" )
 endif()
