--- a/ol_pkgfiles/debs/client/debian/control
+++ b/ol_pkgfiles/debs/client/debian/control
@@ -2,15 +2,15 @@ Source: otherlife
 Section: games
 Priority: optional
 Maintainer: Paul Broadhead <pjbroad@twinmoons.org.uk>
-Build-Depends: debhelper (>= 5), libsdl-net1.2-dev, libxml2-dev, libogg-dev, libvorbis-dev, libopenal-dev, libcal3d12-dev, libsdl-image1.2-dev, libxrandr-dev, zlib1g-dev, libpng12-dev|libpng-dev
-Standards-Version: 3.9.6
-Homepage: http://www.other-life.com
+Build-Depends: debhelper (>= 9), libsdl2-dev, libsdl2-net-dev, libsdl2-image-dev, libsdl2-ttf-dev, libxml2-dev, libogg-dev, libvorbis-dev, libopenal-dev, libcal3d12-dev, libxrandr-dev, zlib1g-dev, libpng12-dev|libpng-dev, cmake
+Standards-Version: 3.9.7
+Homepage: https://www.other-life.com
 
 Package: otherlife
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}, otherlife-data (>=1.9.3), zenity
-Recommends: otherlife-sound (>=1.9.3)
-Suggests: otherlife-music (>=1.9.3)
+Depends: ${misc:Depends}, ${shlibs:Depends}, otherlife-data (>=1.9.5), zenity
+Recommends: otherlife-sound (>=1.9.5)
+Suggests: otherlife-music (>=1.9.5)
 Description: client package for Other Life, a free MMORPG 
  Other Life is a free to play, graphical MMORPG (massively-multi-player
  online role-playing game).  Different from other role-playing games, there are
