--- a/ol_pkgfiles/debs/data/debian/control
+++ b/ol_pkgfiles/debs/data/debian/control
@@ -2,15 +2,15 @@ Source: otherlife-data
 Section: games
 Priority: optional
 Maintainer: Paul Broadhead <pjbroad@twinmoons.org.uk>
-Build-Depends: debhelper (>= 5)
-Standards-Version: 3.9.6
-Homepage: http://www.other-life.com
+Build-Depends: debhelper (>= 9)
+Standards-Version: 3.9.7
+Homepage: https://www.other-life.com
 
 Package: otherlife-data
 Architecture: all
-Depends: ${misc:Depends}, wget (>>1), unzip (>>2), findutils (>>4), otherlife (>=1.9.3)
-Recommends: otherlife-sound (>=1.9.3)
-Suggests: otherlife-music (>=1.9.3)
+Depends: ${misc:Depends}, wget (>>1), unzip (>>2), findutils (>>4), otherlife (>=1.9.5)
+Recommends: otherlife-sound (>=1.9.5)
+Suggests: otherlife-music (>=1.9.5)
 Description: data package for Other Life, a free MMORPG
  Other Life is a free to play, graphical MMORPG (massively-multi-player
  online role-playing game).  Different from other role-playing games, there are
@@ -19,6 +19,4 @@ Description: data package for Other Life, a free MMORPG
  Eternal Lands free MMORPG.
  .
  NOTE: This package will download and install the Other Life data
- archive from twinmoons.org.uk.  This file is the same as the official
- release but hosted to ensure the package continues to work if the
- archive is moved or modified.
+ archive.
