--- a/ol_pkgfiles/debs/music/debian/control
+++ b/ol_pkgfiles/debs/music/debian/control
@@ -2,13 +2,13 @@ Source: otherlife-music
 Section: games
 Priority: optional
 Maintainer: Paul Broadhead <pjbroad@twinmoons.org.uk>
-Build-Depends: debhelper (>= 5)
-Standards-Version: 3.9.6
-Homepage: http://www.other-life.com
+Build-Depends: debhelper (>= 9)
+Standards-Version: 3.9.7
+Homepage: https://www.other-life.com
 
 Package: otherlife-music
 Architecture: all
-Depends: ${misc:Depends}, wget (>>1), unzip (>>2), findutils (>>4), otherlife (>=1.9.3), otherlife-data (>=1.9.3)
+Depends: ${misc:Depends}, wget (>>1), unzip (>>2), findutils (>>4), otherlife (>=1.9.5), otherlife-data (>=1.9.5)
 Description: music package for Other Life, a free MMORPG
  Other Life is a free to play, graphical MMORPG (massively-multi-player
  online role-playing game).  Different from other role-playing games, there are
@@ -17,6 +17,4 @@ Description: music package for Other Life, a free MMORPG
  Eternal Lands free MMORPG.
  .
  NOTE: This package will download and install the Other Life music
- archive from twinmoons.org.uk.  This file is the same as the official
- release but hosted to ensure the package continues to work if the
- archive is moved or modified.
+ archive.
